--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -44,6 +44,8 @@
 
 \newcommand{\nprior}{536,870,912}
 \newcommand{\nposterior}{256}
+\newcommand{\nstars}{98,758}
+\newcommand{\nvisits}{388,196}
 
 % define macros for math
 \newcommand{\hyperpars}{\gamma}
@@ -204,7 +206,7 @@ Most prior searches for companions using survey RV data have therefore
 restricted their searches to only sources with many, high-precision epochs, so
 that the orbital solution can be unambiguously determined (e.g.,
 \citealt{Troup:2016}), or have used simple statistics computed from the data to
-study multiplicity (e.g., ${\rm RV}_{\rm max} - {\rm RV}_{\rm min}$;
+study multiplicity (e.g., $\textrm{RV}_\textrm{max} - \textrm{RV}_\textrm{min}$;
 \citealt{Badenes:2017}).
 
 If there are only a few radial-velocity measurements made per star, and the
@@ -265,9 +267,9 @@ Digital Sky Survey IV (\sdssiv; \citealt{sdss,Blanton:2017}).
 high-resolution ($R \sim 22500$) infrared ($H$-band) spectroscopy of primarily
 \RGB\ stars.
 Targets are selected with simple color and brightness cuts, but the survey uses
-fiber-plugged plates with a maximum of 300 fibers per each $\approx 1.5~{\rm
-deg}^2$ field of view, leading to ``pencil-beam''-like sampling of the stellar
-distribution.
+fiber-plugged plates with a maximum of 300 fibers per each $\approx
+1.5~\textrm{deg}^2$ field of view, leading to ``pencil-beam''-like sampling of
+the stellar distribution.
 Data taken as part of the \apogee\ survey is reduced with the \apogee\ Stellar
 Parameters and Chemical Abundances Pipeline (\acronym{ASPCAP};
 \citealt{Garcia-Perez:2016}), which measures stellar parameters, chemical
@@ -279,8 +281,8 @@ visit separated by a month or more in order to help identify binary stars.
 spectrum while determining the optimal co-addition of the visit spectra.
 
 We use the primary data products from \apogee\ \DR\ (i.e. the \texttt{allStar}
-and \texttt{allVisit} files) which contain 258475 unique source IDs
-(\texttt{APOGEE\_ID}) and 1054381 unique visits.
+and \texttt{allVisit} files) which contain 258,475 unique source IDs
+(\texttt{APOGEE\_ID}) and 1,054,381 unique visits.
 We select all stars with $\geq 3$ visits that each pass a set of quality cuts,
 described below.
 For each visit, we require that the visit velocity uncertainty is $< 100~\kms$
@@ -290,7 +292,7 @@ bitmask: \texttt{PERSIST\_HIGH}, \texttt{PERSIST\_JUMP\_POS},
 For each star, we require that $0 < \log g < 3.5$ and the following bits are not
 set in the \texttt{ASPCAPFLAGS} bitmask: \texttt{STAR\_BAD}.
 After these cuts, and the requirement of $\geq 3$ visits for a given star, we
-are left with \todo{XX} visits for \todo{XX} unique sources.
+are left with \nvisits\ visits for \nstars\ unique sources.
 \figurename~\ref{fig:nvisits} shows the number of stars in several bins of
 number of visits that pass the above quality cuts: \todo{XX}\% of the stars in
 \DR\ have $< 8$ visits.
@@ -301,9 +303,10 @@ number of visits that pass the above quality cuts: \todo{XX}\% of the stars in
 \includegraphics[width=\textwidth]{nvisits.pdf}
 \end{center}
 \caption{%
+\todo{Update with new apogee db file}
 Number of \apogee\ stars in logarithmic bins of number of visits that pass the
 quality cuts described in \sectionname~\ref{sec:data}.
-In total, this work uses \todo{XX} visits and \todo{XX} unique sources.
+In total, this work uses \nvisits\ visits and \nstars\ unique sources.
 \label{fig:nvisits}
 }
 \end{figure}
@@ -401,19 +404,19 @@ Examples of outputs and etc.
 \subsection{Initial inidivual-system posterior samplings}
 \label{sec:initsampling}
 
-For all \todo{XX} \apogee\ stars with $\geq 3$ good visits (see
+For all \nstars\ \apogee\ stars with $\geq 3$ good visits (see
 \sectionname~\ref{sec:data}), we use \thejoker\ to generate posterior samplings
 for each star under the assumptions listed above (see
 \sectionname~\ref{sec:fitting}).
-We start by generating a library of \nprior\ prior samples generated under the
-prior defined in \citet{Price-Whelan:2017}: uniform or isotropic in angle
-parameters, uniform in log-period over the domain $[1, 32768]~{\rm day}$, and a
-beta distribution over eccentricity with fixed parameters
-(\citealt{Kipping:2013}).
+We start by generating a library of \nprior\ prior samples generated under a
+prior similar to that defined in \citet{Price-Whelan:2017}: uniform or isotropic
+in angle parameters, uniform in log-period over the domain $[1,
+32768]~\textrm{day}$, and a beta distribution over eccentricity with fixed
+parameters (\citealt{Kipping:2013}).
 For the prior over the extra variance or jitter parameter, $s$, we initially use
 a Gaussian over the transformed parameter $y = \ln s^2$ with the mean and
 standard deviation of the initial distribution set to $(\mu_{y,0}, \sigma_{y,0})
-= (10.6, 3)$ in units of ${\rm m}~{\rm s}^{-1}$.
+= (10.6, 3)$ in units of $\textrm{m}~\textrm{s}^{-1}$.
 
 We request \nposterior\ posterior samples for each source, and generate the
 samples using an iterative procedure that adapts to the \todo{informativeness}
@@ -428,17 +431,18 @@ When this happens, we proceed in one of two ways:
     pdf, the orbit-space that is consistent with the data is treated as
     effectively unimodal. In this case, we use the location of the returned
     sample, or the median over returned samples to generate a small ball of
-    initial conditions and use the ensemble MCMC sampler (\citealt{Goodman:})
-    implemented in \python\ (\citealt{Foreman-Mackey:}) to continue sampling
-    until we obtain \nposterior\ samples.
+    initial conditions and use standard MCMC to continue sampling until we obtain \nposterior\ samples. In detail, we use an ensemble sampler
+    (\citealt{Goodman:}) implemented in \python\ (\citealt{Foreman-Mackey:}),
+    run with \todo{XX} walkers for \todo{XX} steps, and downsample the resulting
+    MCMC chains until we have \nposterior\ samples.
     \item \emph{needs more prior samples}: If more than 1 posterior sample is
     returned after exhausting the full library of prior samples and the samples
     lie in multiple modes of the posterior pdf, the star is flagged. In this
-    case, the only way forward is to generate more prior samples and continue
+    case, the only way to proceed is to generate more prior samples and continue
     running \thejoker\ for these sources to generate more posterior samples.
 \end{description}
 
-A full run of \thejoker\ on all \todo{XX} \apogee\ stars used in this work took
+A full run of \thejoker\ on all \nstars\ \apogee\ stars used in this work took
 approximately 300 hours on a compute cluster with 448 cores, with the time
 dominated by sources with many ($\gtrsim 10$) visits.
 
@@ -446,63 +450,72 @@ dominated by sources with many ($\gtrsim 10$) visits.
 \subsection{Inferring the extra variance distribution}
 \label{sec:inferjitter}
 
-We use the per-source posterior samplings under the default prior described
-above to infer the parameters of the assumed Gaussian distribution over the
-log-jitter: $(\mu_y, \sigma_y)$.
+As an initial use of the per-source posterior samplings, we use a hierarchical
+Bayesian model to infer the parameters of the (assumed Gaussian) distribution
+over the log-jitter parameter: $(\mu_y, \sigma_y)$.
 This inference serves as a test-case for future work, where we intend to use the
 independent posterior samplings to construct a hierarchical inference over
-companion property distributions, and is also a test of the visit velocity
-uncertainties reported in the \apogee\ data products.
-If the catalog uncertainties are significantly underestimated, we expect the
-inferred log-jitter distribution parameters to tend towards larger values.
+companion property distributions.
+This is also a test of the visit velocity uncertainties reported in the \apogee\
+data products: If the catalog uncertainties are significantly underestimated, we
+expect the inferred log-jitter distribution parameters to tend towards larger
+values.
 
-To update the log-jitter distribution parameters, we maximize the marginal
-likelihood of these population-level parameters.
+In detail, we maximize the marginal likelihood of the population-level
+parameters $\bs{\alpha} = (\mu_y, \sigma_y)$.
 We compute this marginal likelihood using the per-object posterior samples
-re-weighted by the ratio of the value of the hyperprior evaluated at a new
-location over the value of the default prior (see
+re-weighted by the ratio of the value of the hyperprior evaluated at a given
+vector $\bs{\alpha}$ over the value of the default prior at the previously
+assumed values, $\bs{\alpha}_0 = (\mu_{y,0}, \sigma_{y,0})$ (see
 \sectionname~\ref{sec:initsampling}).
 This trick has been used in other hierarchical inferences as a way to
 marginalize over the per-object parameters
-(\citealt{Hogg:2008,Foreman-Mackey:...}), and we describe how to compute the
+(\citealt{Hogg:2008,Foreman-Mackey:...}); we describe how to compute the
 marginal likelihood in detail below.
 
-\todo{Notation relative to above...}
 For each $n$ of $N$ RGB stars in APOGEE, we obtain $K$ posterior samples over
-primary orbital parameters $\bs{w} = (P, e, \omega, M_0, K, v_0)$ and the
-jitter parameter, $y = \ln s^2$, using \thejoker.
+primary orbital parameters $\bs{\theta} = (P, e, \omega, M_0, K, v_0)$ and the
+jitter parameter, $y = \ln s^2$, using \thejoker; For brevity in expressions
+below, we will use the vector
+\begin{equation}
+    \bs{w} = (\bs{\theta}, y)
+\end{equation}
+to represent the full set of parameters.
 To obtain this sampling, we use an interim (Gaussian) prior on the jitter
-parameter parametrized by a mean and standard deviation $\alpha_0 = (\mu_{y,0},
-\sigma_{y,0})$.
+parameter parametrized by a mean and standard deviation, i.e. $\alpha_0 =
+(\mu_{y,0}, \sigma_{y,0})$ as described above.
+For a given source, the posterior samples in the above parameters are drawn from
+the distribution
+\begin{equation}
+    \bs{w}_k \sim p(\bs{w}_k \given D, \bs{\alpha}_0)
+\end{equation}
+where $D$ represents the data for a given object.
 
-\begin{eqnarray}
-    \bs{\theta}_{k} &=& (\bs{w}, y)_{k}\\
-    \bs{\theta}_{k} &\sim& p(\bs{\theta}_k \given \{D_n\}, \alpha_0)
-\end{eqnarray}
-
-New hyperprior, parameters to infer: $\alpha = (\mu_y, \sigma_y)$.
-
-We want to obtain posterior samples in
-\begin{eqnarray}
-    p(\alpha \given \{D_n\}) &\propto& p(\{D_n\} \given \alpha) \, p(\alpha)
-\end{eqnarray}
-where
-\begin{eqnarray}
-    p(\{D_n\} \given \alpha) &=& \prod_n^N p(D_n \given \alpha) \quad .
-\end{eqnarray}
-
-
-\begin{eqnarray}
-    p(D_n \given \alpha) &=& \int \dd \theta_n \, p(D_n \given \theta_n) \,
-      p(\theta_n \given \alpha)\\
-    &=& \int \dd \theta_n \, p(D_n \given \theta_n) \, p(\theta_n \given \alpha) \,
-      \frac{p(\theta_n \given D_n, \alpha_0)}{p(\theta_n \given D_n, \alpha_0)}\\
-    &=& p(D_n \given \alpha_0) \, \int \dd \theta_n \,
-      \frac{p(\theta_n \given \alpha)}{p(\theta_n \given \alpha_0)} \,
-      p(\theta_n \given D_n, \alpha_0)\\
-    &\approx& \frac{\mathcal{Z}_n}{K_n} \,
-      \sum_k^{K_n} \frac{p(y_{nk} \given \alpha)}{p(y_{nk} \given \alpha_0)}
-\end{eqnarray}
+We want to compute the likelihood of all data from all $N$ stars, $\{D_n\}$,
+given a new set of hyper-parameters $\bs{\alpha}$
+\begin{equation}
+    p(\{D_n\} \given \bs{\alpha}) = \prod_n^N p(D_n \given \bs{\alpha})
+\end{equation}
+where in the above, we have assumed that this likelihood is separable ( the data
+for each source are independent).
+The per-source marginal likelihood in the above expression is given by
+\begin{align}
+    p(D_n \given \bs{\alpha}) &= \int \dd \bs{w}_n \, p(D_n \given \bs{w}_n) \,
+      p(\bs{w}_n \given \bs{\alpha})\\
+    &= \int \dd \bs{w}_n \, p(D_n \given \bs{w}_n) \, p(\bs{w}_n \given \bs{\alpha}) \,
+      \frac{p(\bs{w}_n \given D_n, \bs{\alpha}_0)}{p(\bs{w}_n \given D_n, \bs{\alpha}_0)}\\
+    &= p(D_n \given \bs{\alpha}_0) \, \int \dd \bs{w}_n \,
+      \frac{p(\bs{w}_n \given \bs{\alpha})}{p(\bs{w}_n \given \bs{\alpha}_0)} \,
+      p(\bs{w}_n \given D_n, \bs{\alpha}_0) \label{eq:marglike} \quad .
+\end{align}
+Using the Monte Carlo integration approximation, \eqname~\ref{eq:marglike} can
+be simplified to a sum over prior value ratios of the $K$ posterior samples for
+each $n$ star
+\begin{equation}
+    \approx \frac{\mathcal{Z}_n}{K_n} \,
+      \sum_k^{K_n} \frac{p(y_{nk} \given \bs{\alpha})}{p(y_{nk} \given \bs{\alpha}_0)}
+      \quad .
+\end{equation}
 
 Factor y from theta, so most priors cancel. Up to multiplicative constant all we need. Above just for one source, full population:
 
