--- a/notebooks/infer jitter.ipynb
+++ b/notebooks/infer jitter.ipynb
@@ -17,7 +17,6 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('apw-notebook')\n",
     "%matplotlib inline\n",
     "import h5py\n",
     "from sqlalchemy import func\n",
@@ -31,7 +30,6 @@
     "from twoface.sample_prior import make_prior_cache\n",
     "from twoface.io import load_samples\n",
     "from twoface.plot import plot_data_orbits\n",
-    "from twobody.celestial import RVOrbit, VelocityTrend1\n",
     "\n",
     "from scipy.misc import logsumexp"
    ]
@@ -153,11 +151,11 @@
     "stars = session.query(AllStar).join(StarResult, JokerRun, Status, AllVisitToAllStar, AllVisit)\\\n",
     "                              .filter(Status.id > 0)\\\n",
     "                              .filter(JokerRun.name == 'apogee-jitter')\\\n",
-    "                              .filter(AllStar.aspcapflag.op('&')(2**7) == 0)\\\n",
-    "                              .filter(AllStar.starflag.op('&')(2**17) == 0)\\\n",
+    "                              .filter(AllStar.aspcapflag.op('&')(2**np.array([7, 23])) == 0)\\\n",
+    "                              .filter(AllStar.starflag.op('&')(2**np.array([17])) == 0)\\\n",
     "                              .filter(AllStar.logg > 2)\\\n",
     "                              .group_by(AllStar.apstar_id)\\\n",
-    "                              .having(func.count(AllVisit.id) >= 15)\\\n",
+    "                              .having(func.count(AllVisit.id) >= 10)\\\n",
     "                              .all()\n",
     "#                              .limit(1024).all()\n",
     "print(len(stars))"
@@ -176,7 +174,7 @@
     "with h5py.File(samples_file) as f:\n",
     "    # Values that aren't filled get set to nan\n",
     "    N = len(stars)\n",
-    "    y_nk = np.full((N, 128), np.nan)\n",
+    "    y_nk = np.full((N, 256), np.nan)\n",
     "    \n",
     "    for n, key in enumerate([s.apogee_id for s in stars]):\n",
     "        K = len(f[key]['jitter'])\n",
@@ -425,21 +423,16 @@
     "star = session.query(AllStar).filter(AllStar.apogee_id == apogee_ids[i]).limit(1).one()\n",
     "data = star.apogeervdata(clean=True)\n",
     "\n",
-    "samples = JokerSamples(trend_cls=VelocityTrend1, **load_samples(samples_file, apogee_ids[i]))\n",
+    "with h5py.File(samples_file) as f:\n",
+    "    samples = JokerSamples.from_hdf5(f[apogee_ids[i]])\n",
     "_ = plot_data_orbits(data, samples)\n",
     "\n",
     "# residuals?\n",
     "for j in range(len(samples)):\n",
-    "    this_samples = samples[j]\n",
-    "    \n",
-    "    trend_samples = dict()\n",
-    "    for k in samples.trend_cls.parameters:\n",
-    "        trend_samples[k] = this_samples.pop(k)\n",
-    "    trend = samples.trend_cls(**trend_samples)\n",
-    "    orbit = RVOrbit(trend=trend, **this_samples)\n",
+    "    orbit = samples.get_orbit(j)\n",
     "    \n",
     "    fig, ax = plt.subplots(1,1)\n",
-    "    ax.errorbar(data.t.mjd, (data.rv - orbit.generate_rv_curve(data.t)).to(u.km/u.s).value, \n",
+    "    ax.errorbar(data.t.mjd, (data.rv - orbit.radial_velocity(data.t)).to(u.km/u.s).value, \n",
     "                data.stddev.to(u.km/u.s).value,\n",
     "                linestyle='none', marker='o')\n",
     "    ax.set_ylabel('residuals [{0:latex_inline}]'.format(u.km/u.s))\n",
@@ -473,21 +466,16 @@
     "star = session.query(AllStar).filter(AllStar.apogee_id == apogee_ids[i]).limit(1).one()\n",
     "data = star.apogeervdata(clean=True)\n",
     "\n",
-    "samples = JokerSamples(trend_cls=VelocityTrend1, **load_samples(samples_file, apogee_ids[i]))\n",
+    "with h5py.File(samples_file) as f:\n",
+    "    samples = JokerSamples.from_hdf5(f[apogee_ids[i]])\n",
     "_ = plot_data_orbits(data, samples)\n",
     "\n",
     "# residuals?\n",
     "for j in range(len(samples)):\n",
-    "    this_samples = samples[j]\n",
-    "    \n",
-    "    trend_samples = dict()\n",
-    "    for k in samples.trend_cls.parameters:\n",
-    "        trend_samples[k] = this_samples.pop(k)\n",
-    "    trend = samples.trend_cls(**trend_samples)\n",
-    "    orbit = RVOrbit(trend=trend, **this_samples)\n",
+    "    orbit = samples.get_orbit(j)\n",
     "    \n",
     "    fig, ax = plt.subplots(1,1)\n",
-    "    ax.errorbar(data.t.mjd, (data.rv - orbit.generate_rv_curve(data.t)).to(u.km/u.s).value, \n",
+    "    ax.errorbar(data.t.mjd, (data.rv - orbit.radial_velocity(data.t)).to(u.km/u.s).value, \n",
     "                data.stddev.to(u.km/u.s).value,\n",
     "                linestyle='none', marker='o')\n",
     "    ax.set_ylabel('residuals [{0:latex_inline}]'.format(u.km/u.s))\n",
@@ -850,7 +838,9 @@
     "s = np.sqrt(np.exp(y))\n",
     "axes[1].plot(s, np.exp(ll) * 2/s, marker='')\n",
     "axes[1].set_xlim(-0.1, 400)\n",
-    "axes[1].set_xlabel('jitter, $s$ [{0:latex_inline}]'.format(u.m/u.s))"
+    "axes[1].set_xlabel('jitter, $s$ [{0:latex_inline}]'.format(u.m/u.s))\n",
+    "\n",
+    "fig.savefig()"
    ]
   },
   {
