--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -140,16 +140,16 @@ of companion properties.
 
 Stars typically have companions. Main sequence stars in the solar neighborhood
 more often appear in binary or multiple star systems rather than as solitary
-stars (\citealt{ragavhan,tokovinin,todo}).
-This is likely a generic outcome of star formation: turbulent fragmentation in
-collapsing protostellar clouds tends to produce multiplets of stars within
-length-scales comparable to their spheres of influence (e.g.,
+stars (e.g., \citealt{Duquennoy:1991,Raghavan:2010,Tokovinin:2014}).
+This is likely a generic outcome of star formation: For example, turbulent
+fragmentation in collapsing protostellar clouds can produce stellar multiplets
+within length-scales comparable to their spheres of influence (e.g.,
 \citealt{Raskutti:2016}).
 Binary and multiple star systems are therefore of great interest in
-astrophysics: the population of stars and their companions encodes information
-about star formation processes (\citealt{todo}), stellar parameters and
-evolution (\citealt{todo}), and the dynamics of multi-body systems
-(\citealt{todo}).
+astrophysics: The population of stars and their companions encodes information
+about star formation processes, stellar parameters and evolution, and the
+dynamics of multi-body systems (for recent reviews, see
+\citealt{Duchene:2013,Moe:2017}).
 
 % Even without stellar or sub-stellar companions, the vast majority of stars have
 % planetary-mass companions (\citealt{todo}).
